Big refactor and cleanup